--- a/renting-house-42/package.json
+++ b/renting-house-42/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-thunk": "^1.0.0",
     "react-virtualized": "^9.21.2",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
